--- a/index.html
+++ b/index.html
@@ -8,55 +8,50 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/001d53005b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Acompanha Treino</title>
+
+    <title>Treino</title>
 </head>
 
 <body class="container">
-
-    <main class="">
-        <form id="form">
-            <h1 class="text-center mb-3">Adicione o Exercicio</h1>
-             <!--   <select class="form-select mb-1" aria-label="Default select example" id="dia">
-                <option selected>Dia da Semana</option>
-                <option value="Segunda">Segunda</option>
-                <option value="Terça">Terça</option>
-                <option value="Quarta">Quarta</option>
-                <option value="Quinta">Quinta</option>
-                <option value="Sexta">Sexta</option>
-            </select> -->
-            <div class="input-group mb-1">
-                <span class="input-group-text" id="basic-addon1">Nome do Exercicio</span>
-                <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1"
-                    id="exercicio">
+    <form>
+        <h1>Adicione seu treino</h1>
+        <div class="row" >
+            <div class="form-floating mb-3 col">
+                <input id="exercicio"type="text" class="form-control" id="floatingInput" placeholder="exercicio">
+                <label class="ms-2" for="floatingInput">Exercicio</label>
+              </div>
+            <div class="form-floating mb-3 col">
+                <input id="series" type="number" class="form-control" id="floatingInput" placeholder="Séries">
+                <label class="ms-2" for="floatingInput">Séries</label>
+              </div>
+            <div class="form-floating mb-3 col">
+                <input id="descanso"type="number" class="form-control" id="floatingInput" placeholder="Tempo de Descanso">
+                <label class="ms-2"for="floatingInput">Tempo de Descanso</label>
+              </div>
+            <div class="form-floating mb-3 col">
+                <input id="carga" type="number" class="form-control" id="floatingInput" placeholder="Carga">
+                <label class="ms-2"for="floatingInput">Carga</label>
+              </div>
             </div>
-            <div class="input-group mb-1">
-                <span class="input-group-text" id="basic-addon1">Quantas séries?</span>
-                <input type="number" class="form-control" aria-label="Username" aria-describedby="basic-addon1"
-                    id="series">
-            </div>
-            <div class="input-group mb-1">
-                <span class="input-group-text" id="basic-addon1">Quantas repetições?</span>
-                <input type="number" class="form-control" aria-label="Username" aria-describedby="basic-addon1"
-                    id="repeticoes">
-            </div>
-            <div class="input-group mb-1">
-                <span class="input-group-text" id="basic-addon1">Peso</span>
-                <input type="number" class="form-control" aria-label="Username" aria-describedby="basic-addon1"
-                    id="peso">
-            </div>
-
-            <button type="submit" class="btn btn-primary" id="btnAdicionar">Adicionar</button>
-        </form>
-
-        <section>
-            <h2 class="text-center">Treino</h2>
-            <div class="treino row " id="treino">
-            </div>
-        </section>
-
-    </main>
-
+            <p id="msgErro"></p>
+            <button type="submit" class="btn btn-success btn-lg" id="btnCriar">Criar</button>
+    </form>
+<div class="row m-3" id="treinos">
+    <div class="card col-3">
+        <div class="card-body">
+          <p>Exercicio</p>
+          <p>Tempo de Descanço</p>
+          <p>Séries</p>
+          <p>Carga</p>
+          <div class="icones">
+              <i class="fa-solid fa-pen-to-square me-2" onclick="edit(this)"></i>
+              <i class="fa-solid fa-trash" onclick="edit(this)"></i>
+          </div>
+        </div>
+      </div>
+</div>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
