local storage configurado

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                 <label class="ms-2" for="floatingInput">Exercicio</label>
               </div>
             <div class="form-floating mb-3 col">
-                <input id="series" type="number" class="form-control" id="floatingInput" placeholder="Séries">
+                <input id="series" type="text" class="form-control" id="floatingInput" placeholder="Séries">
                 <label class="ms-2" for="floatingInput">Séries</label>
               </div>
             <div class="form-floating mb-3 col">
-                <input id="descanso"type="number" class="form-control" id="floatingInput" placeholder="Tempo de Descanso">
+                <input id="descanso"type="text" class="form-control" id="floatingInput" placeholder="Tempo de Descanso">
                 <label class="ms-2"for="floatingInput">Tempo de Descanso</label>
               </div>
             <div class="form-floating mb-3 col">
-                <input id="carga" type="number" class="form-control" id="floatingInput" placeholder="Carga">
+                <input id="carga" type="text" class="form-control" id="floatingInput" placeholder="Carga">
                 <label class="ms-2"for="floatingInput">Carga</label>
               </div>
             </div>
@@ -39,18 +39,7 @@
             <button type="submit" class="btn btn-success btn-lg" id="btnCriar">Criar</button>
     </form>
 <div class="row m-3" id="treinos">
-    <div class="card col-3">
-        <div class="card-body">
-          <p>Exercicio</p>
-          <p>Tempo de Descanço</p>
-          <p>Séries</p>
-          <p>Carga</p>
-          <div class="icones">
-              <i class="fa-solid fa-pen-to-square me-2" onclick="edit(this)"></i>
-              <i class="fa-solid fa-trash" onclick="edit(this)"></i>
-          </div>
-        </div>
-      </div>
+    
 </div>
 
     <!-- JavaScript Bundle with Popper -->
